# VersatileFilmGrain_INSARennes

./: .gitignore  CMakeLists.txt  Doxyfile  aom.patch
plugin_vlc/: CMakeLists.txt  plugin.c  plugin.h
src/: vfgs  vfgs_fw.c  vfgs_hw.c  vfgs_hw.h  vfgs_main.c  yuv.c
